2006-02-14  Adam Piatyszek  <ediap@users.sourceforge.net>

	* config/acx_blas.m4: Small fix in the automatic MKL's BLAS
	library detection (added missing -lpthread)

2006-02-13  Adam Piatyszek  <ediap@users.sourceforge.net>

	* itpp.spec.in: Created subpackage with the HTML documentation

	* configure.ac, itpp-config.in, itpp.pc.in, tests/Makefile.am:
	Reverted some receent changes in the configuration scripts,
	bacause linking problems with Fortran libraries under x86_64
	platform were caused by an outdated libtool.

2006-02-10  Adam Piatyszek  <ediap@users.sourceforge.net>

	* itpp.spec.in: Added missing files in the `%files' section

	* Makefile.common: Unneccessary AM_LDFLAGS removed
	* configure.ac: Using ITPP_LIBS instead of global LIBS due to
	linking problems with Fortran libs under x86_64 platform
	* itpp-config.in, itpp.pc.in: Flags updated because of the changes
	in the configure script
	* tests/Makefile.am: Locally defined LIBS flag to properly link
	to external libraries
	
	* tests/newton_search_test.cpp: Cosmetic changes - removed
	unneccessary variables

	* itpp/base/filter.h, itpp/comm/channel_code.h: Added virtual
	destructor to base classes. This prevents warnings during
	compilation with gcc-4.0.x.

2006-02-09  Adam Piatyszek  <ediap@users.sourceforge.net>

	* itpp.spec.in: Changes in `Name', `Version' and `Release'
	definitions. Removed distribution dependent release settings. 
	Added DESTDIR to make install command.

	* configure.ac, Makefile.am: Added RPM's spec file to the
	distribution package. Added RPM_RELEASE variable to the
	configure.ac. 

	* config/acx_cblas.m4: Added support for detecting libgslcblas

	* config/acx_fft.m4: Minor fixes to the FFT detection routines.
	Now, MKL and ACML FFT routines are searched in the default BLAS
	library first; even if BLAS was defined explicitly using
	`--with-blas' switch.

2006-02-08  Adam Piatyszek  <ediap@users.sourceforge.net>

	* doc/tutorial/itfile.doc, doc/tutorial/rayleigh.doc,